* moved "You must be logged in to post a comment." to be more clearly readable
* added CSS optimizations
* drop direct support for Internet Explorer 6 or order
* moved enqueued `comment-reply` call from 'header.php' to 'functions.php'
* removed `get_page_number` function as no longer needed
* added PHPDoc style documentation
* removed 'category.php' template file as not used

/**
 * Internet Browsers Reviewed
 * ==========================
 *
 * Apple Safari v5.0.5 (Mac)
 * Apple Safari v5.0.5 (PC)
 * Firefox v5.0 (Mac)
 * Firefox v5.0 (PC)
 * Google Chrome v12.0
 * Internet Explorer v9.0
 * Opera v11.11
 *
 */

/** ------------------------------------------------------------------------- */
----

-- Version 1.9
  - corrects issues with custom menus and brings forward all other changes added at 1.8.7
  
-- Version 1.8.7.1
  - reversion to 1.8.6.1
  
-- Version 1.8.7
  - tested compatible up to WordPress 3.2.1
  - removed inline styles affecting `the_tags()` in index, single, category, author, and 404 templates
  - chronologically arranged the 'Basic FAQ' in the readme file (most recent addition first).
  - hide comment "balloon" if post is password protected
  - miscellaneous clean-up in the style.css file
  - re-worked dropdown menu CSS to better handle multiple child menu items from one parent menu item
  - re-worked "sticky note" image to handle longer menu item names before repeating the image

-- Version 1.8.6.1
  - corrected readme.txt file FAQ re: `bns_dynamic_copyright`

-- Version 1.8.6
  - released June 19, 2011
  - tested compatible up to WordPress 3.2-RC1
  - re-worked `bns_dynamic_copyright` to be more easily defined by the end-user
  - re-worked `desk_mess_mirrored_setup` to add additional `if ( ! function_exists() )` checks
  - re-worked `bns_theme_version` and `bns_modified_post` to better handle internationalization
  
-- Version 1.8.5
  - added function_exists check for `dmm_get_page_number`, `bns_dynamic_copyright` and `bns_theme_version`